--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "redux-cli",
+  "name": "@tannerkc/redux-cli",
   "version": "1.0.0",
-  "description": "",
+  "description": "a simple cli to generate redux base for react apps",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -11,9 +11,25 @@
   "license": "MIT",
   "dependencies": {
     "fs": "^0.0.1-security",
-    "prompt": "^1.1.0",
     "react-redux": "^7.2.4",
     "readline": "^1.3.0",
     "redux": "^4.1.1"
-  }
+  },
+  "bin": {
+    "create-redux": "index.js"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tannerkc/redux-cli.git"
+  },
+  "keywords": [
+    "react",
+    "redux",
+    "cli"
+  ],
+  "bugs": {
+    "url": "https://github.com/tannerkc/redux-cli/issues"
+  },
+  "homepage": "https://github.com/tannerkc/redux-cli#readme"
 }
